after all pages

--- a/previleges.html
+++ b/previleges.html
@@ -223,11 +223,11 @@
                                                     onClick=this.parentNode.children[1].focus();
                                                     style="background-color:#343a40; color: #ffffff;"
                                                     id="roles">Roles<span class="text-danger"> *</span></span>
-                                                <div class="btn-group dropend">
-                                                    <button type="button" class="btn dropdown-toggle"
-                                                        data-bs-toggle="dropdown" aria-expanded="false">
-                                                        Select Role
-                                                    </button>
+                                                    <div class="dropdown">
+                                                        <button class="btn  form-control dropdown-toggle" type="button" id="dropdownMenu2" data-bs-toggle="dropdown" aria-expanded="false">
+                                                          Select Role
+                                                        </button>
+                                                        
                                                     <ul class="dropdown-menu">
                                                         <li><button class="dropdown-item" type="button">Owner</button>
                                                         </li>
