--- a/product inventory.html
+++ b/product inventory.html
@@ -7,7 +7,7 @@
 
     <!--Title logo-->
     <link rel="icon" href="../images/Logo.png">
-    <title>Designs | Ceylon Walls</title>
+    <title>Product Inventory | Ceylon Walls</title>
 
     <!--my css file-->
     <link href="systemCss.css" rel="stylesheet">
@@ -69,10 +69,10 @@
                                     style="color: #ffffff;"></i> Inventory</a>
                             <ul class="collapse list-unstyled" id="inventorymenu">
                                 <li><a href="design.html" class="d-block">Designs</a></li>
-                                <li><a href="product management.html" class="d-block">Products</a></li>
-                                <li><a href="product inventory.html" class="d-block">Product Inventory</a></li>
+                                <li><a href="products.html" class="d-block">Products</a></li>
+                                <li><a href="production inventory.html" class="d-block">Production Inventory</a></li>
                                 <li><a href="material management.html" class="d-block">Material Management</a></li>
-                                                           </ul>
+                            </ul>
                         </li>
                         <hr>
                         <li>
@@ -80,10 +80,12 @@
                                 aria-expanded="false" aria-controls="purchasemenu"><i class="fa-solid fa-cart-shopping"
                                     style="color: #ffffff;"></i> Production</a>
                             <ul class="collapse list-unstyled" id="purchasemenu">
-                                <li><a href="production order management.html" class="d-block">Production Order management</a></li>
-                                <li><a href="production order confirmation.html" class="d-block">Production Order Confirmation</a></li>
+                                <li><a href="production order management.html" class="d-block">Production Order
+                                        management</a></li>
+                                <li><a href="production order confirmation.html" class="d-block">Production Order
+                                        Confirmation</a></li>
                                 <li><a href="production.html" class="d-block">Production</a></li>
-                                                           </ul>
+                            </ul>
                         </li>
                         <hr>
                         <li>
@@ -131,14 +133,16 @@
         <div class="col-8 p-4">
             <div class="row">
                 <div class="col-1 text-end">
-                    <i class="fa-solid fa-paintbrush fa-2x" style="color: #ffffff;"></i>
+                    <i class="fa-solid fa-cubes fa-2x" style="color: #ffffff;"></i>
                 </div>
                 <div class="col-11">
-                    <h2 style="color: #ffffff;">Designs</h2>
+                    <h2 style="color: #ffffff;">Product Inventory</h2>
                 </div>
             </div>
         </div>
     </div>
+    </div>
+
 
 
     <!--TABLE SECTION-->
@@ -163,10 +167,10 @@
                     <table id="tableUsers" class="table table-striped table-hover ">
                         <thead class="table-dark text-start">
                             <tr>
-                                <th>Design Code</th>
-                                <th>Image</th>
-                                <th>Name</th>
-                                <th>Category</th>
+                                <th>Inventory ID</th>
+                                <th>Product ID</th>
+                                <th>Available Quantity</th>
+                                <th>Total Quantity</th>
                                 <th>Status</th>
                                 <th>Notes</th>
                                 <th>Options</th>
@@ -229,116 +233,112 @@
 
 
 
-                                        <!--design code filed-->
+                                        <!--inventory id filed-->
                                         <div class="row mt-3">
                                             <div class="input-group">
-                                                <span class="input-group-text col-3 fw-bold"
+                                                <span class="input-group-text col-4 fw-bold"
                                                     onClick=this.parentNode.children[1].focus();
                                                     style="background-color:#343a40; color: #ffffff;"
-                                                    id="designCode">Design code</span>
-                                                <input type="text" class="form-control" 
-                                                    disabled>
+                                                    id="inventoryid">Inventory ID</span>
+                                                <input type="text" class="form-control" disabled>
+                                            </div>
+                                        </div>
+
+                                        <!--product id filed-->
+                                        <div class="row mt-3">
+                                            <div class="input-group">
+                                                <span class="input-group-text col-4 fw-bold"
+                                                    onClick=this.parentNode.children[1].focus();
+                                                    style="background-color:#343a40; color: #ffffff;"
+                                                    id="productid">Product ID</span>
+                                                <input type="text" class="form-control" disabled>
                                             </div>
                                         </div>
 
 
-                                        <!--photo filed-->
+                                        <!--available quantity filed-->
                                         <div class="row mt-3">
                                             <div class="input-group">
-                                                <span class="input-group-text col-3 fw-bold"
+                                                <span class="input-group-text col-4 fw-bold"
                                                     onClick=this.parentNode.children[1].focus();
                                                     style="background-color:#343a40; color: #ffffff;"
-                                                    id="image">Image<span class="text-danger">
-                                                        *</span></span>
-                                                <input type="file" class="form-control" required>
-                                            </div>
-                                        </div>
-
-
-                                        <!--image name field-->
-                                        <div class="row mt-3">
-                                            <div class="input-group">
-                                                <span class="input-group-text col-3 fw-bold"
-                                                    onClick=this.parentNode.children[1].focus();
-                                                    style="background-color:#343a40; color: #ffffff;"
-                                                    id="imageName">Image Name<span class="text-danger">
-                                                        *</span></span>
-                                                <input type="text" class="form-control"
-                                                    placeholder="Type Design Name..." required>
-                                            </div>
-                                        </div>
-
-                                        <!-- category datalist-->
-                                        <div class="row mt-3">
-                                            <div class="input-group">
-                                                <span class="input-group-text col-3 fw-bold"
-                                                    onClick=this.parentNode.children[1].focus();
-                                                    style="background-color:#343a40; color: #ffffff;"
-                                                    id="category">Category<span class="text-danger">
+                                                    id="image">Available Quantity<span class="text-danger">
                                                         *</span></span>
 
+                                                <select id="numbers1" class="form-control"></select>
 
-                                                <input class="form-control" list="datalistOptions" id="exampleDataList"
-                                                    placeholder="Type to search...">
-                                                <datalist id="datalistOptions">
-                                                    <option value="Boho Art">
-                                                    <option value="Psydelic Art">
-                                                    <option value="Religious Art - Buddhist">
-                                                    <option value="Religious Art - Catholic">
-                                                    <option value="Floral Art">
-                                                </datalist>
+                                                <script>
+                                                    const select1 = document.getElementById('numbers1');
+                                                    for (let i = 1; i <= 50; i++) {
+                                                        const option = document.createElement('option');
+                                                        option.value = i;
+                                                        option.text = i;
+                                                        select1.appendChild(option);
+                                                    }
+                                                </script>
                                             </div>
                                         </div>
 
+                                        <!--total quantity filed-->
+                                        <div class="row mt-3">
+                                            <div class="input-group">
+                                                <span class="input-group-text col-4 fw-bold"
+                                                    onClick=this.parentNode.children[1].focus();
+                                                    style="background-color:#343a40; color: #ffffff;"
+                                                    id="totalqty">Total Quantity<span class="text-danger">
+                                                        *</span></span>
+
+                                                        <input type="text" class="form-control" required>
+                                                    </div>
+                                        </div>
+
+                                              
                                         <!-- stauts radiobutton-->
                                         <div class="row mt-3">
                                             <div class="input-group">
-                                                <span class="input-group-text col-3 fw-bold"
+                                                <span class="input-group-text col-4 fw-bold"
                                                     onClick=this.parentNode.children[1].focus();
                                                     style="background-color:#343a40; color: #ffffff;"
                                                     id="status">Status<span class="text-danger">
                                                         *</span></span>
 
                                                 <div class="form-check">
-                                                    <input class="form-check-input m-2" type="radio"
-                                                        name="flexRadioDefault" id="flexRadioDefault2" checked>
+                                                    <input class="form-check-input m-1" type="radio"
+                                                        name="flexRadioDefault" id="in stock" checked>
                                                     <label class="form-check-label" for="flexRadioDefault2">
-                                                        Company Design
+                                                        In Stock
                                                     </label>
                                                 </div>
                                                 <div class="form-check">
-                                                    <input class="form-check-input m-2" type="radio"
-                                                        name="flexRadioDefault" id="flexRadioDefault2">
+                                                    <input class="form-check-input m-1" type="radio"
+                                                        name="flexRadioDefault" id="low stock">
                                                     <label class="form-check-label" for="flexRadioDefault2">
-                                                        Customer Design
+                                                       Low Stock
+                                                    </label>
+                                                </div>
+                                                <div class="form-check">
+                                                    <input class="form-check-input m-1" type="radio"
+                                                        name="flexRadioDefault" id="out of stock">
+                                                    <label class="form-check-label" for="flexRadioDefault2">
+                                                       Out of Stock
                                                     </label>
                                                 </div>
                                             </div>
                                         </div>
 
-                                        <!-- orientation radiobutton-->
+                                        <!-- notes textarea-->
                                         <div class="row mt-3">
                                             <div class="input-group">
-                                                <span class="input-group-text col-3 fw-bold"
+                                                <span class="input-group-text col-4 fw-bold"
                                                     onClick=this.parentNode.children[1].focus();
                                                     style="background-color:#343a40; color: #ffffff;"
-                                                    id="imageOrientation">Orientation<span class="text-danger">
+                                                    id="imageOrientation">Notes<span class="text-danger">
                                                         *</span></span>
 
-                                                <div class="form-check">
-                                                    <input class="form-check-input m-2" type="radio" name="orientation"
-                                                        id="portrait" checked>
-                                                    <label class="form-check-label" for="flexRadioDefault2">
-                                                        Portrait
-                                                    </label>
-                                                </div>
-                                                <div class="form-check">
-                                                    <input class="form-check-input m-2" type="radio" name="orientation"
-                                                        id="landscape">
-                                                    <label class="form-check-label" for="flexRadioDefault2">
-                                                        Landscape
-                                                    </label>
-                                                </div>
+                                                        <div class="form-floating">
+                                                            <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea"></textarea>
+                                                            <label for="floatingTextarea"></label>
+                                                          </div>
                                             </div>
                                         </div>
 
