--- a/product inventory.html
+++ b/product inventory.html
@@ -133,7 +133,7 @@
         <div class="col-8 p-4">
             <div class="row">
                 <div class="col-1 text-end">
-                    <i class="fa-solid fa-cubes fa-2x" style="color: #ffffff;"></i>
+                    <i class="fa-solid fa-cubes fa-bounce fa-2x" style="color: #ffffff;"></i>
                 </div>
                 <div class="col-11">
                     <h2 style="color: #ffffff;">Product Inventory</h2>
@@ -309,13 +309,7 @@
                                                         In Stock
                                                     </label>
                                                 </div>
-                                                <div class="form-check">
-                                                    <input class="form-check-input m-1" type="radio"
-                                                        name="flexRadioDefault" id="low stock">
-                                                    <label class="form-check-label" for="flexRadioDefault2">
-                                                       Low Stock
-                                                    </label>
-                                                </div>
+                                              
                                                 <div class="form-check">
                                                     <input class="form-check-input m-1" type="radio"
                                                         name="flexRadioDefault" id="out of stock">
