--- a/design.html
+++ b/design.html
@@ -131,7 +131,7 @@
         <div class="col-8 p-4">
             <div class="row">
                 <div class="col-1 text-end">
-                    <i class="fa-solid fa-paintbrush fa-2x" style="color: #ffffff;"></i>
+                    <i class="fa-solid fa-paintbrush fa-bounce fa-2x" style="color: #ffffff;"></i>
                 </div>
                 <div class="col-11">
                     <h2 style="color: #ffffff;">Designs</h2>
