--- a/employee.html
+++ b/employee.html
@@ -121,7 +121,7 @@
         <div class="col-8 p-4">
             <div class="row">
                 <div class="col-1">
-                    <i class="fa-solid fa-users fa-2x" style="color: #ffffff;"></i>
+                    <i class="fa-solid fa-users fa-bounce fa-2x" style="color: #ffffff;"></i>
                 </div>
                 <div class="col-11">
                     <h2 style="color: #ffffff;">Employees</h2>
