--- a/material management.html
+++ b/material management.html
@@ -140,7 +140,7 @@
         <div class="col-8 p-4">
             <div class="row">
                 <div class="col-1 text-end">
-                    <i class="fa-brands fa-slack fa-2x" style="color: #ffffff;"></i>
+                    <i class="fa-brands fa-slack fa-bounce fa-2x" style="color: #ffffff;"></i>
                 </div>
                 <div class="col-11">
                     <h2 style="color: #ffffff;">Material Management</h2>
