--- a/previleges.html
+++ b/previleges.html
@@ -121,7 +121,7 @@
         <div class="col-8 p-4">
             <div class="row">
                 <div class="col-1 text-end">
-                    <i class="fa-solid fa-universal-access fa-3x" style="color: #ffffff;"></i>
+                    <i class="fa-solid fa-universal-access fa-bounce fa-3x" style="color: #ffffff;"></i>
                 </div>
                 <div class="col-11">
                     <h2 style="color: #ffffff;">Previleges</h2>
