--- a/users.html
+++ b/users.html
@@ -119,7 +119,7 @@
         <div class="col-8 p-4">
             <div class="row">
                 <div class="col-1 text-end">
-                    <i class="fa-solid fa-user fa-2x" style="color: #ffffff;"></i>
+                    <i class="fa-solid fa-user fa-bounce fa-2x" style="color: #ffffff;"></i>
                 </div>
                 <div class="col-11">
                     <h2 style="color: #ffffff;">Users</h2>
