completed purchase module

--- a/design.html
+++ b/design.html
@@ -76,8 +76,8 @@
                         </li>
                         <hr>
                         <li>
-                            <a href="#" class="d-block" data-bs-toggle="collapse" data-bs-target="#purchasemenu"
-                                aria-expanded="false" aria-controls="purchasemenu"><i class="fa-solid fa-cart-shopping"
+                            <a href="#" class="d-block" data-bs-toggle="collapse" data-bs-target="#productionmenu"
+                                aria-expanded="false" aria-controls="productionmenu"><i class="fa-solid fa-cart-shopping"
                                     style="color: #ffffff;"></i> Production</a>
                             <ul class="collapse list-unstyled" id="purchasemenu">
                                 <li><a href="production order management.html" class="d-block">Production Order management</a></li>
