completed basic outline

--- a/suppliers.html
+++ b/suppliers.html
@@ -385,13 +385,13 @@
                                                 onClick=this.parentNode.children[1].focus();
                                                 style="background-color:#343a40; color: #ffffff;"
                                                 id="productionid">Material List</span>
-                                            <select class="Supplier id" aria-label="Default select example">
+                                                <select class="form-select" aria-label="Default select example">
                                                 <option selected>Supplier ID</option>
                                                 <option value="1">001</option>
                                                 <option value="2">002</option>
                                                 <option value="3">003</option>
                                             </select>
-                                            <select class="Material ID" aria-label="Default select example">
+                                            <select class="form-select" aria-label="Default select example">
                                                 <option selected>Material ID</option>
                                                 <option value="1">MT001</option>
                                                 <option value="2">MT002</option>
