--- a/employee.html
+++ b/employee.html
@@ -21,6 +21,15 @@
 
     <!--link font awesome css file-->
     <link rel="stylesheet" href="../../Resources/fontawesome/fontawesome-free-6.6.0/css/all.min.css">
+
+    <style>
+        .scrollable-card {
+            height: 500px;
+            /* Set the desired height */
+            overflow-y: auto;
+            /* Enable vertical scrolling */
+        }
+    </style>
 </head>
 
 
@@ -154,7 +163,8 @@
                             <thead class="table-dark text-start">
                                 <tr>
                                     <th>ID</th>
-                                    <th>Name</th>
+                                    <th>Full Name</th>
+                                    <th>Calling Name</th>
                                     <th>NIC</th>
                                     <th>Contact No</th>
                                     <th>Email</th>
@@ -206,8 +216,8 @@
                         <div class="card">
                             <img src="../images/bg.png" class="card-img" alt="Background Image">
                             <div class="card-img-overlay d-flex align-items-center justify-content-center">
-                                <div class="card-body">
 
+                                <div class="card-body scrollable-card">
                                     <!--required mark-->
                                     <div class="row">
                                         <div class="col-12 fw-bold text-end">
@@ -215,34 +225,59 @@
                                         </div>
                                     </div>
 
-                                    <form action="">
+                                    <form action="" class="needs-validation" novalidate method="post">
 
-                                        <!--full name field-->
+                                        <!--full name-->
                                         <div class="row">
-                                            <div class="input-group">
-                                                <span class="input-group-text col-3 fw-bold"
-                                                    style="background-color:#343a40; color: #ffffff;"
-                                                    id="fullName">Full
-                                                    Name<span class="text-danger"> *</span></span>
-                                                <input type="text" class="form-control" placeholder="Type Full Name...">
-                                            </div>
-                                        </div>
-
-
-                                        <!--NIC field-->
-                                        <div class="row mt-3">
                                             <div class="input-group">
                                                 <span class="input-group-text col-3 fw-bold"
                                                     onClick=this.parentNode.children[1].focus();
                                                     style="background-color:#343a40; color: #ffffff;"
-                                                    id="nic">NIC<span class="text-danger"> *</span></span>
-                                                <input type="text" class="form-control"
-                                                    placeholder="Type valid ID number...">
+                                                    id="labelFullName">Full Name<span class="text-danger">
+                                                        *</span></span>
+                                                <input type="text" class="form-control" placeholder="Type Full Name..."
+                                                    id="textFullName" autocomplete="off" required>
+                                                <div class="invalid-feedback">
+                                                    Please enter full name.
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        <!-- calling name -->
+                                        <div class="row">
+                                            <div class="input-group">
+                                                <span class="input-group-text col-3 fw-bold mt-3"
+                                                    onClick=this.parentNode.children[1].focus();
+                                                    style="background-color:#343a40; color: #ffffff;"
+                                                    id="labelCallingName" required>Calling Name<span
+                                                        class="text-danger">
+                                                        *</span></span>
+                                                <select name="city" id="selectCallingName" class="form-select mt-3">
+                                                    <option value="" disabled selected>Select Calling
+                                                        Name</option>
+                                                </select>
+                                                <div class="invalid-feedback"> Please select calling name.</div>
                                             </div>
                                         </div>
 
 
-                                        <!--Contact No field-->
+                                        <!--NIC -->
+                                        <div class="row mt-3">
+                                            <div class="input-group">
+                                                <span class="input-group-text col-3 fw-bold"
+                                                    onClick=this.parentNode.children[1].focus();
+                                                    style="background-color:#343a40; color: #ffffff;" id="nic">NIC<span
+                                                        class="text-danger"> *</span></span>
+                                                <input type="text" class="form-control" id="textNIC"
+                                                    placeholder="Type valid ID number..." required autocomplete="off">
+                                                <div class="invalid-feedback">
+                                                    Please type National Identity Card Number.
+                                                </div>
+                                            </div>
+                                        </div>
+
+
+                                        <!--Contact No -->
                                         <div class="row mt-3">
                                             <div class="input-group">
                                                 <span class="input-group-text col-3 fw-bold"
@@ -251,7 +286,11 @@
                                                     id="contactNo">Contact No<span class="text-danger">
                                                         *</span></span>
                                                 <input type="text" class="form-control"
-                                                    placeholder="Type 10-digit number..."> 
+                                                    placeholder="Type 10-digit number..." id="phone" required
+                                                    autocomplete="off" max="10">
+                                                <div class="invalid-feedback">
+                                                    Please type Contact No.
+                                                </div>
                                             </div>
                                         </div>
 
@@ -264,7 +303,12 @@
                                                     style="background-color:#343a40; color: #ffffff;"
                                                     id="email">Email<span class="text-danger">
                                                         *</span></span>
-                                                <input type="email" class="form-control" placeholder="Type your email...">
+                                                <input type="email" class="form-control"
+                                                    placeholder="Type your email..." id="email" required
+                                                    autocomplete="off">
+                                                <div class="invalid-feedback">
+                                                    Please type Email.
+                                                </div>
                                             </div>
                                         </div>
 
@@ -278,16 +322,18 @@
                                                     id="civilStatus">Civil Status<span class="text-danger">
                                                         *</span></span>
                                                 <div class="form-check form-check-inline m-2">
-                                                    <input class="form-check-input" type="radio"
-                                                        name="single" id="inlineRadio1" value="option1">
+                                                    <input class="form-check-input" type="radio" name="radioCivilStatus"
+                                                        id="inlineRadio1" value="single" checked>
                                                     <label class="form-check-label" for="inlineRadio1">Single</label>
                                                 </div>
                                                 <div class="form-check form-check-inline m-2">
-                                                    <input class="form-check-input" type="radio"
-                                                        name="married" id="inlineRadio2" value="option2">
+                                                    <input class="form-check-input" type="radio" name="radioCivilStatus"
+                                                        id="inlineRadio2" value="married">
                                                     <label class="form-check-label" for="inlineRadio2">Married</label>
                                                 </div>
+                                                <div class="invalid-feedback">Please select Civil Status</div>
                                             </div>
+
                                         </div>
 
 
@@ -334,6 +380,7 @@
             </div>
         </div>
     </div>
+    <script src="validation.js"></script>
 </body>
 
 </html>
